[gd_scene load_steps=4 format=1]

[ext_resource path="res://data/resources/themes/default.tres" type="Theme" id=1]
[ext_resource path="res://data/fonts/roboto/roboto-bold.fnt" type="Font" id=3]
[ext_resource path="res://data/scripts/menu/play.gd" type="Script" id=2]

[node name="PlayMenu" type="Control"]

margin/right = 40
margin/bottom = 40
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
script/script = ExtResource( 2 )
__meta__ = { "__editor_plugin_screen__":"2D", "__editor_plugin_states__":{ "2D":{ "ofs":Vector2( 140.148, -38.494 ), "snap_grid":true, "snap_offset":Vector2( 0, 0 ), "snap_pixel":false, "snap_relative":false, "snap_rotation":false, "snap_rotation_offset":0, "snap_rotation_step":0.261799, "snap_show_grid":true, "snap_step":Vector2( 60, 60 ), "zoom":0.66342 }, "3D":{ "ambient_light_color":Color( 0.15, 0.15, 0.15, 1 ), "default_light":true, "default_srgb":false, "deflight_rot_x":0.942478, "deflight_rot_y":0.628319, "fov":45, "show_grid":true, "show_origin":true, "viewport_mode":1, "viewports":[ { "distance":4, "listener":true, "pos":Vector3( 0.242772, -0.192693, -0.676225 ), "use_environment":false, "use_orthogonal":false, "x_rot":0, "y_rot":0 }, { "distance":4, "listener":false, "pos":Vector3( 0, 0, 0 ), "use_environment":false, "use_orthogonal":false, "x_rot":0, "y_rot":0 }, { "distance":4, "listener":false, "pos":Vector3( 0, 0, 0 ), "use_environment":false, "use_orthogonal":false, "x_rot":0, "y_rot":0 }, { "distance":4, "listener":false, "pos":Vector3( 0, 0, 0 ), "use_environment":false, "use_orthogonal":false, "x_rot":0, "y_rot":0 } ], "zfar":500, "znear":0.1 }, "Anim":{ "visible":false } }, "__editor_run_settings__":{ "custom_args":"-l $scene", "run_mode":0 } }

[node name="PlayPanel" type="Panel" parent="."]

margin/left = 780
margin/right = 1920
margin/bottom = 1080
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PlayPanel"]

margin/right = 1140
margin/bottom = 120
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/bold_font = ExtResource( 3 )
bbcode/enabled = true
bbcode/bbcode = "[center][b][color=#ffff00]Play[/color][/b][/center]"
visible_characters = -1

[node name="OptionButton" type="OptionButton" parent="PlayPanel"]

margin/left = 600
margin/top = 180
margin/right = 1020
margin/bottom = 240
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
flat = false
align = 0
selected = -1
items = [  ]

[node name="Label" type="Label" parent="PlayPanel"]

margin/left = 60
margin/top = 180
margin/right = 540
margin/bottom = 240
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
text = "Level"
align = 2
valign = 1
percent_visible = 1
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="PlayPanel"]

margin/left = 600
margin/top = 840
margin/right = 1020
margin/bottom = 960
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "Play"
flat = false

[node name="LevelInformation" type="RichTextLabel" parent="PlayPanel"]

margin/left = 420
margin/top = 300
margin/right = 1020
margin/bottom = 780
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/bold_font = ExtResource( 3 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1

[connection signal="item_selected" from="PlayPanel/OptionButton" to="." method="_on_OptionButton_item_selected"]

[connection signal="pressed" from="PlayPanel/Button" to="." method="_on_Button_pressed"]
